--- a/편지.html
+++ b/편지.html
@@ -9,19 +9,19 @@
     <h2><a href="index.html" title = "가라르에서 팔데아로.">가라르에서 팔데아로.</a></h2>
 <h3>너에게 전하는 편지</h3>
 <h4 style = "margin-top:30px;">9월 10일 토요일</h4>
-<img src = "1.jpg" width="20%">
+<img src = "../1.jpg" width="20%">
 <p style = "margin-left:20px;">네가 보내준 편지 지금 받았어. 지금까지 마을에만 있다보니... 편지를 받기 어려웠거든. 처음부터는 아니지만 있었던 일들 편지로 보내줄게. 
 <strong>지금 같이 보낸 건 내 <u>리그 카드.</u></strong> 가라르 지방에는 자기 리그카드를 나눠주는 문화가 있는 모양이야. 너에게 맨처음 주고싶어서 아직 아무에게도 안 줬어.
 <br><br>ps. 새 술은 새 동이에 담으라는 말이 있지. 그것처럼 여행 떠났을 때 머리를 검정색으로 염색해봤는데 어울려?</p>
 
 <h4 style = "margin-top:30px;">9월 11일 일요일</h4>
-<img src = "2.jpg" width="40%">
-<img src = "3.jpg" width="40%">
+<img src = "../2.jpg" width="40%">
+<img src = "../3.jpg" width="40%">
 <p style = "margin-left:20px;">이건 처음 체육관에 갔을 때 사진이야. 방송으로 송출된 영상이 남아있길래 거기서 들고왔어. 결과는 당연하게도 내가 이겼지. 
 다행히 내가 데리고다니는 애들이 풀에 상성인 ㅇ...(검은색으로 박박 지워져있다.). 음, 이건 비밀로 할래. 궁금하면 네가 직접 와서 봐. 내가 누구를 데리고 다니는지.</p>
 
 <h4 style = "margin-top:30px;">9월 12일 월요일</h4>
-<img src = "4.jpg" width="40%">
+<img src = "../4.jpg" width="40%">
 <p style = "margin-left:20px;">풍경 예쁘지. 두번째 체육관이 있는 바우마을인데 등대가 예뻐서 찍어봤어. 여긴 물타입 체육관이었는데, 관장이랑 싸우기 전이 물기둥으로 된 퍼즐이더라고.
 난이도 그렇게 어렵진 않았지만... 네가 좋아하지 않을까 싶던 곳이었어. 여기 씨푸드 레스토랑이 유명하다던데, 나중에 같이 오자. 이번에 같이 간 사람이 별로였지만 음식은 괜찮았어.</p>
 
